Resolves #805 Product filter is reset if 'product sorting' or 'view mode' or 'amount of displayed products per page' is changed URLs are not converted to lower case anymore

--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
@@ -407,14 +407,14 @@
                 </td>
             </tr>
         }
-        @if (Model.Id > 0 && !String.IsNullOrEmpty(Model.LastVisitedPage))
+        @if (Model.Id > 0 && Model.LastVisitedPage.HasValue())
         {
             <tr>
                 <td class="adminTitle">
                     @Html.SmartLabelFor(model => model.LastVisitedPage)
                 </td>
                 <td class="adminData">
-                    @Html.DisplayFor(model => model.LastVisitedPage)
+					<a href="@Model.LastVisitedPage">@Model.LastVisitedPage.Truncate(128, "...")</a>
                 </td>
             </tr>
         }
