--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/List.cshtml
@@ -58,40 +58,50 @@
     <tr>
         <td>
             @(Html.Telerik().Grid<CategoryModel>()
-                    .Name("categories-grid")
-                    .ClientEvents(events => events
-                        .OnDataBinding("onDataBinding"))
-                    .Columns(columns =>
-                    {
-                        columns.Bound(x => x.Breadcrumb)
+					.Name("categories-grid")
+					.ClientEvents(events => events
+						.OnDataBinding("onDataBinding")
+						.OnDataBound("onDataBound"))
+					.Columns(columns =>
+					{
+						columns.Bound(x => x.Id)
+							.ClientTemplate("<input type='checkbox' name='checkedRecords' value='<#= Id #>' class='checkboxGroups'/>")
+							.Title("<input id='mastercheckbox' type='checkbox'/>")
+							.Width(50)
+							.HtmlAttributes(new { style = "text-align:center" })
+							.HeaderHtmlAttributes(new { style = "text-align:center" });
+						columns.Bound(x => x.Breadcrumb)
 							.Title(T("Admin.Catalog.Products.Categories.Fields.Category").Text)
-                            .Template(x => Html.ActionLink(x.Breadcrumb, "Edit", new { id = x.Id }))
+							.Template(x => Html.ActionLink(x.Breadcrumb, "Edit", new { id = x.Id }))
 							.ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Breadcrumb #></a>");
 						columns.Bound(x => x.FullName);
 						columns.Bound(x => x.Alias);
-                        columns.Bound(x => x.Published)
-                            .Width(160)
-                            .Template(item => @Html.SymbolForBool(item.Published))
-                            .ClientTemplate(@Html.SymbolForBool("Published"))
-                            .Centered();
-                        columns.Bound(x => x.DisplayOrder)
-                            .Width(160)
-                            .Centered();
+						columns.Bound(x => x.Published)
+							.Width(160)
+							.Template(item => @Html.SymbolForBool(item.Published))
+							.ClientTemplate(@Html.SymbolForBool("Published"))
+							.Centered();
+						columns.Bound(x => x.DisplayOrder)
+							.Width(160)
+							.Centered();
 						columns.Bound(x => x.LimitedToStores)
 							.Width(160)
 							.Template(item => @Html.SymbolForBool(item.LimitedToStores))
 							.ClientTemplate(@Html.SymbolForBool("LimitedToStores"))
 							.Centered();
-                    })
-                    .Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
-                    .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Category"))
+					})
+					.Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
+					.DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Category"))
 					.PreserveGridState()
-                    .EnableCustomBinding(true))
+					.EnableCustomBinding(true))
         </td>
     </tr>
 </table>
 
 <script type="text/javascript">
+	@*used by widget SmartStore.DataExport::ExportButtonsGeneral.cshtml*@
+    var selectedIds = [];
+
     $(document).ready(function () {
         //search button
         $('#btnSearch').click(function () {
@@ -99,6 +109,8 @@
             var grid = $('#categories-grid').data('tGrid');
             grid.currentPage = 1; //new search. Set page size to 1
             grid.ajaxRequest();
+            $('.checkboxGroups').attr('checked', false).change();
+            selectedIds = [];
             return false;
         });
 
@@ -108,6 +120,30 @@
                 return false;
             }
         });
+
+    	$('#mastercheckbox').click(function () {
+    		$('.checkboxGroups').attr('checked', $(this).is(':checked')).change();
+    	});
+
+    	//wire up checkboxes. 
+    	$(document).on('change', '#categories-grid input[type=checkbox][id!=mastercheckbox]', function (e) {
+    		var $check = $(this);
+    		if ($check.is(":checked") == true) {
+    			var checked = jQuery.inArray($check.val(), selectedIds);
+    			if (checked == -1) {
+    				selectedIds.push($check.val());
+    			}
+    		}
+    		else {
+    			var checked = jQuery.inArray($check.val(), selectedIds);
+    			if (checked > -1) {
+    				selectedIds = $.grep(selectedIds, function (item, index) {
+    					return item != $check.val();
+    				});
+    			}
+    		}
+    		updateMasterCheckbox();
+    	});
     });
 
     function onDataBinding(e) {
@@ -118,4 +154,21 @@
         };
         e.data = searchModel;
     }
+
+	function onDataBound(e) {
+		$('#categories-grid input[type=checkbox][id!=mastercheckbox]').each(function () {
+			var currentId = $(this).val();
+			var checked = jQuery.inArray(currentId, selectedIds);
+			$(this).attr('checked', checked > -1);
+		});
+
+		updateMasterCheckbox();
+	}
+
+	function updateMasterCheckbox() {
+		var numChkBoxes = $('#categories-grid input[type=checkbox][id!=mastercheckbox]').length;
+		var numChkBoxesChecked = $('#categories-grid input[type=checkbox][checked][id!=mastercheckbox]').length;
+		$('#mastercheckbox').attr('checked', numChkBoxes == numChkBoxesChecked && numChkBoxes > 0);
+	}
+
 </script>
