--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
@@ -1,8 +1,6 @@
 ﻿@model ManufacturerListModel
 @using Telerik.Web.Mvc.UI
-@{
-    var gridPageSize = EngineContext.Current.Resolve<SmartStore.Core.Domain.Common.AdminAreaSettings>().GridPageSize;
-    
+@{   
     ViewBag.Title = T("Admin.Catalog.Manufacturers").Text;
 }
 <div class="section-header">
@@ -45,12 +43,19 @@
 <table class="adminContent">
     <tr>
         <td>
-            @(Html.Telerik().Grid<ManufacturerModel>(Model.Manufacturers.Data)
+            @(Html.Telerik().Grid<ManufacturerModel>()
 					.Name("manufacturers-grid")
 					.ClientEvents(events => events
-						.OnDataBinding("onDataBinding"))
+						.OnDataBinding("onDataBinding")
+						.OnDataBound("onDataBound"))
 					.Columns(columns =>
 					{
+						columns.Bound(x => x.Id)
+							.ClientTemplate("<input type='checkbox' name='checkedRecords' value='<#= Id #>' class='checkboxGroups'/>")
+							.Title("<input id='mastercheckbox' type='checkbox'/>")
+							.Width(50)
+							.HtmlAttributes(new { style = "text-align:center" })
+							.HeaderHtmlAttributes(new { style = "text-align:center" });
 						columns.Bound(x => x.Name)
 							.Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
 							.ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Name #></a>");
@@ -68,7 +73,7 @@
 							.ClientTemplate(@Html.SymbolForBool("LimitedToStores"))
 							.Centered();
 					})
-					.Pageable(settings => settings.Total(Model.Manufacturers.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
+					.Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
 					.DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Manufacturer"))
 					.PreserveGridState()
 					.EnableCustomBinding(true))
@@ -77,6 +82,9 @@
 </table>
 
 <script type="text/javascript">
+	@*used by widget SmartStore.DataExport::ExportButtonsGeneral.cshtml*@
+	var selectedIds = [];
+
     $(document).ready(function () {
         //search button
         $('#btnSearch').click(function () {
@@ -93,6 +101,30 @@
                 return false;
             }
         });
+
+    	$('#mastercheckbox').click(function () {
+    		$('.checkboxGroups').attr('checked', $(this).is(':checked')).change();
+    	});
+
+    	//wire up checkboxes. 
+    	$(document).on('change', '#manufacturers-grid input[type=checkbox][id!=mastercheckbox]', function (e) {
+    		var $check = $(this);
+    		if ($check.is(":checked") == true) {
+    			var checked = jQuery.inArray($check.val(), selectedIds);
+    			if (checked == -1) {
+    				selectedIds.push($check.val());
+    			}
+    		}
+    		else {
+    			var checked = jQuery.inArray($check.val(), selectedIds);
+    			if (checked > -1) {
+    				selectedIds = $.grep(selectedIds, function (item, index) {
+    					return item != $check.val();
+    				});
+    			}
+    		}
+    		updateMasterCheckbox();
+    	});
     });
 
     function onDataBinding(e) {
@@ -101,4 +133,21 @@
         };
         e.data = searchModel;
     }
+
+	function onDataBound(e) {
+		$('#manufacturers-grid input[type=checkbox][id!=mastercheckbox]').each(function () {
+			var currentId = $(this).val();
+			var checked = jQuery.inArray(currentId, selectedIds);
+			$(this).attr('checked', checked > -1);
+		});
+
+		updateMasterCheckbox();
+	}
+
+	function updateMasterCheckbox() {
+		var numChkBoxes = $('#manufacturers-grid input[type=checkbox][id!=mastercheckbox]').length;
+		var numChkBoxesChecked = $('#manufacturers-grid input[type=checkbox][checked][id!=mastercheckbox]').length;
+		$('#mastercheckbox').attr('checked', numChkBoxes == numChkBoxesChecked && numChkBoxes > 0);
+	}
+
 </script>
