--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/InfoDeployment.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/InfoDeployment.cshtml
@@ -4,42 +4,51 @@
 @{
 	Layout = null;
 }
-<p>
+@helper FileDownloadLink(string path, string fileName)
+{
+	<div>
+		@Html.IconForFileExtension(Path.GetExtension(fileName), false)
+		<a href="@Url.Action("DownloadExportFile", new { id = Model.Id, name = fileName })" download>@fileName</a>
+	</div>
+}
+<div>
 	<i class="fa @(Model.DeploymentTypeIconClass)"></i>&nbsp;@Model.DeploymentTypeName
 	@if (Model.DeploymentType == ExportDeploymentType.FileSystem && Model.IsPublic)
 	{
 		<text>(@T("Common.Public"))</text>
 	}
-</p>
-@if (Model.DeploymentType == ExportDeploymentType.FileSystem)
-{
-	if (Model.IsPublic)
+</div>
+<div style="margin: 5px 0 0 20px;">
+	@if (Model.DeploymentType == ExportDeploymentType.FileSystem)
 	{
-		foreach (var grp in Model.PublicFiles.OrderBy(x => x.StoreId).GroupBy(x => x.StoreId))
+		foreach (var path in Model.ProfileDetails.ExportFiles)
 		{
-			<p>
+			@FileDownloadLink(path, Path.GetFileName(path))
+		}
+
+		if (Model.ProfileDetails.PublicFiles.Count > 0)
+		{
+			foreach (var grp in Model.ProfileDetails.PublicFiles.OrderBy(x => x.StoreId).GroupBy(x => x.StoreId))
+			{
+				<p></p>
 				<div>@(grp.First().StoreName):</div>
-				@foreach (var file in grp)
+				foreach (var file in grp)
 				{
-					<div><a href="@file.FileUrl" download>@file.FileName</a></div>
+					<div><a href="@file.FileUrl" download>@file.FileUrl</a></div>
 				}
-			</p>
+			}
 		}
 	}
-	else
+	else if (Model.DeploymentType == ExportDeploymentType.Email)
 	{
-		<div>@Model.FileSystemPath</div>
+		<div>@Model.EmailAddresses</div>
 	}
-}
-else if (Model.DeploymentType == ExportDeploymentType.Email)
-{
-	<div>@Model.EmailAddresses</div>
-}
-else if (Model.DeploymentType == ExportDeploymentType.Http)
-{
-	<div>@Model.Url</div>
-}
-else if (Model.DeploymentType == ExportDeploymentType.Ftp)
-{
-	<div>@Model.Url</div>
-}
+	else if (Model.DeploymentType == ExportDeploymentType.Http)
+	{
+		<div>@Model.Url</div>
+	}
+	else if (Model.DeploymentType == ExportDeploymentType.Ftp)
+	{
+		<div>@Model.Url</div>
+	}
+</div>
