--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -131,7 +131,7 @@ else
 	</div>
 </div>
 
-<div id="export-profile-file-dialog" class="modal hide fade" tabindex="-1">
+<div id="export-profile-file-dialog" class="modal modal-large hide fade" tabindex="-1">
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal"><b>x</b></button>
 		<h4 class="caption">@T("Admin.DataExchange.Export.ExportFiles")</h4>
