--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Deployment.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Deployment.cshtml
@@ -48,6 +48,13 @@
 			<td class="adminData">
 				@Html.EditorFor(x => x.CreateZipArchive)
 				@Html.ValidationMessageFor(x => x.CreateZipArchive)
+				@if (Model.Details.ZipPath.HasValue())
+				{
+					<div style="display: inline-block; margin-left: 10px;">
+						@Html.IconForFileExtension(Path.GetExtension(Model.Details.ZipPath), false)
+						<a href="@Url.Action("DownloadExportFile", new { id = Model.Id, name = Path.GetFileName(Model.Details.ZipPath) })" download>@Path.GetFileName(Model.Details.ZipPath)</a>
+					</div>
+				}
 			</td>
 		</tr>
 		<tr>
