Hide link to a topic page if it is limited to stores (part 1)

--- a/src/Presentation/SmartStore.Web/Views/Common/Menu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Menu.cshtml
@@ -41,10 +41,12 @@
     <li>
         <a href="@Url.RouteUrl("ProductSearch")">@T("Search")</a>
     </li>
-    <li>
-        <a href="@Url.RouteUrl("ContactUs")">@T("ContactUs")</a>
-    </li>
-
+	@if (Model.HasContactUsPage)
+	{
+		<li>
+			<a href="@Url.RouteUrl("ContactUs")">@T("ContactUs")</a>
+		</li>
+	}
     @Html.Widget("header_menu_after")
 </ul>
 
