Hide link to a topic page if it is limited to stores (final part)

--- a/src/Presentation/SmartStore.Web/Views/Common/InfoBlock.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/InfoBlock.Mobile.cshtml
@@ -3,8 +3,14 @@
 @Html.Widget("mobile_infoblock_before")
 <div data-role="navbar">
     <ul>
-        <li><a href="@Url.RouteUrl("ContactUs")" data-role="button">@T("ContactUs")</a></li>
-        <li><a href="@Url.RouteUrl("Topic", new { SystemName = "aboutus" })" data-role="button">@T("AboutUs")</a></li>
+		@if (Model.TopicPageUrls.ContainsKey("contactus"))
+		{
+			<li><a href="@Model.TopicPageUrls["contactus"]" data-role="button">@T("ContactUs")</a></li>
+		}
+		@if (Model.TopicPageUrls.ContainsKey("aboutus"))
+		{
+			<li><a href="@Model.TopicPageUrls["aboutus"]" data-role="button">@T("AboutUs")</a></li>
+		}
         @if (Model.BlogEnabled)
         {
             <li><a href="@Url.RouteUrl("Blog")" data-role="button">@T("Blog")</a></li>
@@ -21,24 +27,38 @@
         {
             <li><a href="@Url.RouteUrl("CompareProducts")" data-role="button">@T("Products.Compare.List")</a></li>
         }
-        <li><a href="@Url.RouteUrl("Topic", new { SystemName = "shippinginfo" })" data-role="button">@T("ShippingReturns")</a></li>
+		@if (Model.TopicPageUrls.ContainsKey("shippinginfo"))
+		{
+			<li><a href="@Model.TopicPageUrls["shippinginfo"]" data-role="button">@T("ShippingReturns")</a></li>
+		}
     </ul>
 </div>
 <div data-role="navbar">
     <ul>
-        <li><a href="@Url.RouteUrl("Topic", new { SystemName = "privacyinfo" })" data-role="button">@T("PrivacyNotice")</a></li>
-        <li><a href="@Url.RouteUrl("Topic", new { SystemName = "conditionsofuse" })" data-role="button">@T("ConditionsOfUse")</a></li>
+		@if (Model.TopicPageUrls.ContainsKey("privacyinfo"))
+		{
+			<li><a href="@Model.TopicPageUrls["privacyinfo"]" data-role="button">@T("PrivacyNotice")</a></li>
+		}
+		@if (Model.TopicPageUrls.ContainsKey("conditionsofuse"))
+		{
+			<li><a href="@Model.TopicPageUrls["conditionsofuse"]" data-role="button">@T("ConditionsOfUse")</a></li>
+		}
     </ul>
 </div>
 <div data-role="navbar">
     <ul>
-        <li><a href="@Url.RouteUrl("Topic", new { SystemName = "imprint" })">@T("Imprint")</a></li>
-        <li><a href="@Url.RouteUrl("Topic", new { SystemName = "disclaimer" })">@T("Disclaimer")</a></li>
+		@if (Model.TopicPageUrls.ContainsKey("imprint"))
+		{
+			<li><a href="@Model.TopicPageUrls["imprint"]" data-role="button">@T("Imprint")</a></li>
+		}
+		@if (Model.TopicPageUrls.ContainsKey("disclaimer"))
+		{
+			<li><a href="@Model.TopicPageUrls["disclaimer"]" data-role="button">@T("Disclaimer")</a></li>
+		}
     </ul>
 </div>
 @if (Model.AllowPrivateMessages)
 {
-
     <div data-role="navbar">
         <ul>
             <li><a href="@Url.RouteUrl("PrivateMessages", new { tab = "inbox" })" data-role="button" rel="nofollow">@T("PrivateMessages.Inbox")</a></li>
