Moved FastProperty & FastActivator to namespace SmartStore.ComponentModel

--- a/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.cshtml
@@ -349,7 +349,7 @@
 <script type="text/javascript">
     $(function () {
         var settings = {
-            galleryHeight: 300,
+            galleryHeight: 600, // 300,
             galleryStartIndex: @(Model.DetailsPictureModel.GalleryStartIndex),
             showImageDescription: false,
             enableZoom: toBool('@(Model.DetailsPictureModel.DefaultPictureZoomEnabled)'),
