Moved SmartStore.Web.Framework.Mvc.ProviderModel to SmartStore.Web.Framework.Plugins.ProviderModel

--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProviderModel
+﻿@model SmartStore.Web.Framework.Plugins.ProviderModel
 
 @{    
     ViewBag.Title = T("Admin.Common.Configure").Text + " - " + Model.FriendlyName;
